SGLParserTestProject/SGL/AntlrParser/SGLParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g 2011-09-14 19:27:42

	//using SGLParserTester;
	//using System.Collections.Generic;
	//using SGL;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;

import org.antlr.runtime.tree.*;

public class SGLParser extends DebugParser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "BLOCK", "STATEMENTS", "IF", "EXP", "ID_LIST", "VARDEF", "ASSIGN", "NEGATE", "OBJMETHOD", "STRING", "FORDEC", "FORCOND", "FORITER", "STRINGNOQUOTES", "VARINC", "VARDEC", "BREAK", "PARAM_TYPE_LIST", "PARAM_NAME_LIST", "METH_CALL", "RETURN", "Identifier", "IntType", "BooleanType", "StringType", "FloatType", "ObjectType", "IntegerAtom", "FloatAtom", "BooleanAtom", "Sprite", "Animation", "Layer", "Origin", "StringAtom", "EscapeSequence", "Letter", "SGLIDDigit", "UnicodeEscape", "OctalEscape", "HEX_DIGIT", "WS", "COMMENT", "'{'", "'}'", "'method'", "'('", "')'", "'void'", "';'", "','", "'='", "'.'", "'while'", "'for'", "'if'", "'else'", "'break'", "'return'", "'?'", "':'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'++'", "'--'", "'new'", "'null'"
    };
    public static final int T__68=68;
    public static final int T__69=69;
    public static final int T__66=66;
    public static final int T__67=67;
    public static final int T__64=64;
    public static final int T__65=65;
    public static final int OBJMETHOD=12;
    public static final int T__62=62;
    public static final int T__63=63;
    public static final int Origin=37;
    public static final int SGLIDDigit=41;
    public static final int Sprite=34;
    public static final int PARAM_NAME_LIST=22;
    public static final int IntType=26;
    public static final int T__61=61;
    public static final int ID_LIST=8;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int BREAK=20;
    public static final int Identifier=25;
    public static final int IF=6;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int Animation=35;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int EXP=7;
    public static final int FORITER=16;
    public static final int StringType=28;
    public static final int T__59=59;
    public static final int RETURN=24;
    public static final int COMMENT=46;
    public static final int STRINGNOQUOTES=17;
    public static final int VARDEF=9;
    public static final int T__50=50;
    public static final int BooleanType=27;
    public static final int VARDEC=19;
    public static final int T__80=80;
    public static final int T__47=47;
    public static final int T__81=81;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int IntegerAtom=31;
    public static final int FloatType=29;
    public static final int FORDEC=14;
    public static final int StringAtom=38;
    public static final int PARAM_TYPE_LIST=21;
    public static final int METH_CALL=23;
    public static final int HEX_DIGIT=44;
    public static final int NEGATE=11;
    public static final int BooleanAtom=33;
    public static final int WS=45;
    public static final int FORCOND=15;
    public static final int T__71=71;
    public static final int T__72=72;
    public static final int T__70=70;
    public static final int UnicodeEscape=42;
    public static final int BLOCK=4;
    public static final int ASSIGN=10;
    public static final int Layer=36;
    public static final int STATEMENTS=5;
    public static final int ObjectType=30;
    public static final int FloatAtom=32;
    public static final int T__76=76;
    public static final int T__75=75;
    public static final int VARINC=18;
    public static final int T__74=74;
    public static final int OctalEscape=43;
    public static final int Letter=40;
    public static final int EscapeSequence=39;
    public static final int T__73=73;
    public static final int T__79=79;
    public static final int STRING=13;
    public static final int T__78=78;
    public static final int T__77=77;

    // delegates
    // delegators

    public static final String[] ruleNames = new String[] {
        "invalidRule", "returnStat", "methodType", "mainStatement", "castExpression", 
        "conditionalAndExpression", "variableAssignment", "relationalExpression", 
        "mainBlock", "methodDef", "elseStat", "paramList", "variableType", 
        "conditionalExpression", "elseIfStat", "statement", "block", "negativeExpression", 
        "multiplicativeExpression", "variableDeclarationList", "oneLineStatement", 
        "forLoop", "equalityExpression", "semicolonStatement", "variableName", 
        "methodCall", "compilationUnit", "variableDecAssignment", "expressionList", 
        "singleBlock", "unaryExpression", "conditionalOrExpression", "expression", 
        "variableUnaryChange", "breakStat", "unaryExpressionNotPlusMinus", 
        "commonBlock", "mathAtom", "additiveExpression", "whileLoop", "stringQuote", 
        "literal", "ifStat", "arguments", "objectMethod", "ifStatement"
    };
     
        public int ruleLevel = 0;
        public int getRuleLevel() { return ruleLevel; }
        public void incRuleLevel() { ruleLevel++; }
        public void decRuleLevel() { ruleLevel--; }
        public SGLParser(TokenStream input) {
            this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
        }
        public SGLParser(TokenStream input, int port, RecognizerSharedState state) {
            super(input, state);
            DebugEventSocketProxy proxy =
                new DebugEventSocketProxy(this,port,adaptor);
            setDebugListener(proxy);
            setTokenStream(new DebugTokenStream(input,proxy));
            try {
                proxy.handshake();
            }
            catch (IOException ioe) {
                reportError(ioe);
            }
            TreeAdaptor adap = new CommonTreeAdaptor();
            setTreeAdaptor(adap);
            proxy.setTreeAdaptor(adap);
        }
    public SGLParser(TokenStream input, DebugEventListener dbg) {
        super(input, dbg);

         
        TreeAdaptor adap = new CommonTreeAdaptor();
        setTreeAdaptor(adap);

    }
    protected boolean evalPredicate(boolean result, String predicate) {
        dbg.semanticPredicate(result, predicate);
        return result;
    }

    protected DebugTreeAdaptor adaptor;
    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = new DebugTreeAdaptor(dbg,adaptor);

    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }


    public String[] getTokenNames() { return SGLParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g"; }


    /*
            public Dictionary<String,Method> methods = new Dictionary<String,Method>();

        	private void DefineMethod(String id, Object type, Object idList, Object block) {
                    // 'idList' is possibly null!  Create an empty tree in that case.  
                    CommonTree idListTree = idList == null ? new CommonTree() : (CommonTree)idList;

                    // 'type' is never null
                    String typeString = ((CommonTree)type).ToString();
                    Console.WriteLine("method found! Name: " + id + " returns " + typeString); 

                    // 'block' is never null 
                    CommonTree blockTree = (CommonTree)block;

                    // The method name with the exact same type of parameters after it, is the unique key 
                    String key = id;

                    Console.WriteLine("Adding the parameters:");
                    for (int a = 0; a < idListTree.GetChild(0).ChildCount; a++) {
                        key += "-" + idListTree.GetChild(0).GetChild(a).ToString();
                        Console.WriteLine("added " + idListTree.GetChild(0).GetChild(a).ToString());
                    }
                    //idListTree.GetChild(1).ChildCount;
                    methods.Add(key, new Method(id, typeString, idListTree, blockTree));
                    Console.WriteLine("Method " + id + " saved, unique key: " + key);
            	}
            	
    		public override void EmitErrorMessage(string msg)
                	{
                    	throw new SGLCompilerException(-1, "Antlr.Parser", msg);
                	}	




    	// Error reporting
    	/*
        private StdErrReporter errorReporter = new StdErrReporter();
        public override void EmitErrorMessage(String msg)
        {
        	errorReporter.ReportError(msg);
        }
        */
        
    	// For global variables (accessable anywhere)
    	//NullableDictionnary globalVariables = new NullableDictionnary();
    	
    	// For main variables (accessable anywhere but methods)
    	//Stack<NullableDictionnary> localVariables = new Stack<NullableDictionnary>();
    	//NullableDictionnary mainVariables = new NullableDictionnary();
    	
    	// This should tell the statements where they have to look up variables
    	//NullableDictionnary variableAccess = mainVariables;

    	//String output;
    	//public String GetOutput() {
    	//	return output;
    	//}


    public static class compilationUnit_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "compilationUnit"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:123:1: compilationUnit : mainBlock ;
    public final SGLParser.compilationUnit_return compilationUnit() throws RecognitionException {
        SGLParser.compilationUnit_return retval = new SGLParser.compilationUnit_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SGLParser.mainBlock_return mainBlock1 = null;



        try { dbg.enterRule(getGrammarFileName(), "compilationUnit");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(123, 1);

        try {
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:124:2: ( mainBlock )
            dbg.enterAlt(1);

            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:124:4: mainBlock
            {
            root_0 = (Object)adaptor.nil();

            dbg.location(124,4);
            pushFollow(FOLLOW_mainBlock_in_compilationUnit156);
            mainBlock1=mainBlock();

            state._fsp--;

            adaptor.addChild(root_0, mainBlock1.getTree());

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(125, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "compilationUnit");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "compilationUnit"

    public static class mainBlock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "mainBlock"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:127:1: mainBlock : ( mainStatement | methodDef )* -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) ) ;
    public final SGLParser.mainBlock_return mainBlock() throws RecognitionException {
        SGLParser.mainBlock_return retval = new SGLParser.mainBlock_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SGLParser.mainStatement_return mainStatement2 = null;

        SGLParser.methodDef_return methodDef3 = null;


        RewriteRuleSubtreeStream stream_methodDef=new RewriteRuleSubtreeStream(adaptor,"rule methodDef");
        RewriteRuleSubtreeStream stream_mainStatement=new RewriteRuleSubtreeStream(adaptor,"rule mainStatement");
        try { dbg.enterRule(getGrammarFileName(), "mainBlock");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(127, 1);

        try {
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:128:2: ( ( mainStatement | methodDef )* -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) ) )
            dbg.enterAlt(1);

            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:128:4: ( mainStatement | methodDef )*
            {
            dbg.location(128,4);
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:128:4: ( mainStatement | methodDef )*
            try { dbg.enterSubRule(1);

            loop1:
            do {
                int alt1=3;
                try { dbg.enterDecision(1);

                int LA1_0 = input.LA(1);

                if ( ((LA1_0>=Identifier && LA1_0<=ObjectType)||(LA1_0>=57 && LA1_0<=59)||(LA1_0>=61 && LA1_0<=62)) ) {
                    alt1=1;
                }
                else if ( (LA1_0==49) ) {
                    alt1=2;
                }


                } finally {dbg.exitDecision(1);}

                switch (alt1) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:128:5: mainStatement
            	    {
            	    dbg.location(128,5);
            	    pushFollow(FOLLOW_mainStatement_in_mainBlock169);
            	    mainStatement2=mainStatement();

            	    state._fsp--;

            	    stream_mainStatement.add(mainStatement2.getTree());

            	    }
            	    break;
            	case 2 :
            	    dbg.enterAlt(2);

            	    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:128:21: methodDef
            	    {
            	    dbg.location(128,21);
            	    pushFollow(FOLLOW_methodDef_in_mainBlock173);
            	    methodDef3=methodDef();

            	    state._fsp--;

            	    stream_methodDef.add(methodDef3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);
            } finally {dbg.exitSubRule(1);}



            // AST REWRITE
            // elements: mainStatement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 129:8: -> ^( BLOCK ^( STATEMENTS ( mainStatement )* ) )
            {
                dbg.location(129,11);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:129:11: ^( BLOCK ^( STATEMENTS ( mainStatement )* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(129,13);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                dbg.location(129,19);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:129:19: ^( STATEMENTS ( mainStatement )* )
                {
                Object root_2 = (Object)adaptor.nil();
                dbg.location(129,21);
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATEMENTS, "STATEMENTS"), root_2);

                dbg.location(129,32);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:129:32: ( mainStatement )*
                while ( stream_mainStatement.hasNext() ) {
                    dbg.location(129,32);
                    adaptor.addChild(root_2, stream_mainStatement.nextTree());

                }
                stream_mainStatement.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(130, 7);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "mainBlock");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "mainBlock"

    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "block"
    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:132:1: block : ( statement )* -> ^( BLOCK ^( STATEMENTS ( statement )* ) ) ;
    public final SGLParser.block_return block() throws RecognitionException {
        SGLParser.block_return retval = new SGLParser.block_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SGLParser.statement_return statement4 = null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try { dbg.enterRule(getGrammarFileName(), "block");
        if ( getRuleLevel()==0 ) {dbg.commence();}
        incRuleLevel();
        dbg.location(132, 1);

        try {
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:133:2: ( ( statement )* -> ^( BLOCK ^( STATEMENTS ( statement )* ) ) )
            dbg.enterAlt(1);

            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:133:4: ( statement )*
            {
            dbg.location(133,4);
            // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:133:4: ( statement )*
            try { dbg.enterSubRule(2);

            loop2:
            do {
                int alt2=2;
                try { dbg.enterDecision(2);

                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=Identifier && LA2_0<=ObjectType)||(LA2_0>=57 && LA2_0<=59)||(LA2_0>=61 && LA2_0<=62)) ) {
                    alt2=1;
                }


                } finally {dbg.exitDecision(2);}

                switch (alt2) {
            	case 1 :
            	    dbg.enterAlt(1);

            	    // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:133:4: statement
            	    {
            	    dbg.location(133,4);
            	    pushFollow(FOLLOW_statement_in_block221);
            	    statement4=statement();

            	    state._fsp--;

            	    stream_statement.add(statement4.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);
            } finally {dbg.exitSubRule(2);}



            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 134:3: -> ^( BLOCK ^( STATEMENTS ( statement )* ) )
            {
                dbg.location(134,6);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:134:6: ^( BLOCK ^( STATEMENTS ( statement )* ) )
                {
                Object root_1 = (Object)adaptor.nil();
                dbg.location(134,8);
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(BLOCK, "BLOCK"), root_1);

                dbg.location(134,14);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:134:14: ^( STATEMENTS ( statement )* )
                {
                Object root_2 = (Object)adaptor.nil();
                dbg.location(134,16);
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STATEMENTS, "STATEMENTS"), root_2);

                dbg.location(134,27);
                // C:\\Users\\Dominik Halfkann\\Documents\\Visual Studio 2010\\Projects\\SGLParserTester\\SGL\\AntlrParser\\SGL.g:134:27: ( statement )*
                while ( stream_statement.hasNext() ) {
                    dbg.location(134,27);
                    adaptor.addChild(root_2, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        dbg.location(135, 2);

        }
        finally {
            dbg.exitRule(getGrammarFileName(), "block");
            decRuleLevel();
            if ( getRuleLevel()==0 ) {dbg.terminate();}
        }

        return retval;
    }
    // $ANTLR end "block"

    public static class singleBlock_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
